# cpp-resolve

./: CMakeLists.txt  README.md  conanfile.txt  cpp_resolve.cpp  vcpkg.json
resources/: cpp_resolve.properties  cpp_resolve_tests.properties
resources/log4cxx/: log4cxx.h
test/: CMakeLists.txt  MacroTests.cpp
util/: CMakeLists.txt  CppFile.cpp  CppFile.h  DirectoryEntryIterator.cpp  DirectoryEntryIterator.h  Logger.cpp  Logger.h  Optional.h
